<resources>
    <string name="app_name">Project Alice</string>
    <string name="mensagem_bem_vindo">Bem-vindo ao Projeto Alice!</string>
    <string name="botaoVoz">Comando de Voz</string>

    <string name="rele1">Rele 1</string>
    <string name="rele2">Rele 2</string>
    <string name="rele3">Rele 3</string>
    <string name="rele4">Rele 4</string>
    <string name="rele5">Rele 5</string>
    <string name="rele6">Rele 6</string>
    <string name="rele7">Rele 7</string>
    <string name="rele8">Rele 8</string>
</resources>